--- a/strings/command.yml
+++ b/strings/command.yml
@@ -3,8 +3,8 @@ START_COMMAND : ["start", "mstart"]
 HELP_COMMAND : ["help"]
 SETTINGS_COMMAND : ["settings", "setting"]
 RELOAD_COMMAND : ["admincache", "reload"]
-GSTATS_COMMAND : ["gstats", "globalstats"]
-STATS_COMMAND : ["stats"]
+GSTATS_COMMAND : ["Ankit", "khushi"]
+STATS_COMMAND : ["Harsh"]
 LANGUAGE_COMMAND : ["langchangexd"]
 PLAY_COMMAND : ["play", "vplay", "cplay", "cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
 PLAYMODE_COMMAND : ["playmode", "mode"]
@@ -26,9 +26,9 @@ SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
 RESTART_COMMAND : ["reboot"]
-ADDSUDO_COMMAND : ["addsudo", "addrandi", "randi"]
+ADDSUDO_COMMAND : ["ddsudo", "addrandi", "randi"]
 DELSUDO_COMMAND : ["delsudo", "rmsudo", "bsdk", "bhakkbsdk"]
-SUDOUSERS_COMMAND : ["sudolist", "listsudo", "sudoers", "sudo"]
+SUDOUSERS_COMMAND : ["wtf", "dsudo"]
 BROADCAST_COMMAND : ["broadcast", "gcast"]
 BLACKLISTCHAT_COMMAND : ["blacklistchat", "blchat"]
 WHITELISTCHAT_COMMAND : ["whitelistchat", "unblchat", "wlchat"]
@@ -53,7 +53,7 @@ BLOCK_COMMAND : ["block"]
 UNBLOCK_COMMAND : ["unblock"]
 BLOCKED_COMMAND : ["blockedusers", "blocked", "blusers"]
 SPEEDTEST_COMMAND : ["speedtest", "spt"]
-ACTIVEVC_COMMAND : ["activevoice", "activevc"]
+ACTIVEVC_COMMAND : ["ac", "activevc"]
 ACTIVEVIDEO_COMMAND : ["activevideo", "activev"]
 GBAN_COMMAND : ["gban", "gandban", "gandfaadban", "globalban"]
 UNGBAN_COMMAND : ["ungban", "gandback", "globalunban"]
